tests/rosetta/out/Pascal/amb.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/amb.pas
amb.pas(13,19) Warning: function result variable of a managed type does not seem to be initialized
amb.pas(52,60) Error: Incompatible type for arg no. 1: Got "TArray$1$crc90DE1C48", expected "TArray$1$crc9F312717"
amb.pas(54,80) Error: Incompatible type for arg no. 1: Got "TArray$1$crc90DE1C48", expected "TArray$1$crc9F312717"
amb.pas(82,22) Error: Incompatible type for arg no. 2: Got "TArray$1$crcE41905E8", expected "TArray$1$crc862A1656"
amb.pas(13,19) Warning: function result variable of a managed type does not seem to be initialized
amb.pas(102) Fatal: There were 3 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
